[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mint"
description = "A Python Qt application for ITER Data Visualtization using the iplotlib framework"
authors = [
    { name = "Lana Abadie", email = "lana.abadie@iter.org" },
    { name = "Pablo Martin Villares", email = "pmartin@minsait.com" },
    { name = "Jhon Steeven Cabanilla Alvarado", email = "jscabanilla@minsait.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.11"
license = { text = "MIT" }
keywords = ["MINT", "Qt Application", "UDA", "Data Visualtization"]
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "iplotlogging>=0.2.1",
    "iplotlib >= 0.5.0",
    "iplotDataAccess >= 0.4.0",
    "iplotWidgets",
    "iplotProcessing >= 0.4.0",
    "psutil >= 5.8.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://git.iter.org/scm/vis/mint.git"

[project.scripts]
mint = "mint.__main__:main"
mint-signal-cfg = "mint.gui.mtSignalConfigurator:main"

[tool.setuptools]
packages = ["mint"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"mint.data" = ["scsv/*", "workspaces/*", "data_signals/*", "blueprint.json"]
"mint.gui" = ["icons/*.png", "res/*.ui"]
"mint" = ["mydatasources.cfg"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mint/_version.py"
versionfile_build = "mint/_version.py"
tag_prefix = ""
parentdir_prefix = ""



