[build-system]
requires = ["setuptools>=42.0", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "mint"
description = "A Python Qt application for ITER Data Visualtization using the iplotlib framework"
authors = [
    { name = "Lana Abadie", email = "lana.abadie@iter.org" },
]
maintainers = [
    { name = "Jhon Steeven Cabanilla Alvarado", email = "jscabanilla@minsait.com" },
    { name = "Pablo Martin Villares", email = "pmartin@minsait.com" },
    { name = "Mario Gómez Ballesteros", email = "mgomezb@minsait.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["MINT", "Qt", "Application", "UDA", "Data", "Visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "iplotLogging >= 0.2.1",
    "iplotlib >= 0.5.0",
    "iplotDataAccess >= 0.4.0",
    "iplotWidgets",
    "iplotProcessing >= 0.4.0",
    "psutil >= 5.8.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest >= 6.0"]

[project.urls]
Homepage = "https://github.com/iplot-viz/mint"
Repository = "https://github.com/iplot-viz/mint.git"
Issues = "https://github.com/iplot-viz/mint/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mint*"]

[tool.setuptools.package-data]
"mint.data" = ["scsv/*", "workspaces/*", "data_signals/*", "canvas_properties/*", "blueprint.json"]
"mint.gui" = ["icons/*.png", "res/*.ui"]
"mint" = ["mydatasources.cfg"]

[project.scripts]
mint = "mint.__main__:main"
mint-signal-cfg = "mint.gui.mtSignalConfigurator:main"

[tool.pytest.ini_options]
addopts = "-rA -s -v"
testpaths = "mint"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mint/_version.py"
versionfile_build = "mint/_version.py"
tag_prefix = ""
parentdir_prefix = ""



